[package]
name = "livetex"
version = "0.1.1"
edition = "2021"
categories = ["web-programming::http-server"]
authors = ["Zhai Can <bczhc0@126.com>"]
license = "MIT"
keywords = ["latex", "live-server", "tex"]
description = "A TeX/LaTeX auto builder and server."

[dependencies]
anyhow = "1.0.95"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.6"
once_cell = "1.20.2"
temp-dir = "0.1.14"
lazy-regex = "3.4.1"
mime = "0.3.17"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"